--- a/build.gradle
+++ b/build.gradle
@@ -10,14 +10,15 @@ buildscript {
     }
 }
 
+version = '0.1.1'
+
 apply plugin: 'java'
-apply plugin: 'eclipse'
 apply plugin: 'idea'
-apply plugin: 'spring-boot' 
+apply plugin: 'spring-boot'
 
 jar {
-    baseName = 'demo'
-    version = '0.0.1-SNAPSHOT'
+    baseName = 'spring-boot-actuator-endpoint-list'
+    version = project.version
 }
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
@@ -34,13 +35,78 @@ dependencies {
     testCompile("org.springframework.boot:spring-boot-starter-test") 
 }
 
-eclipse {
-    classpath {
-         containers.remove('org.eclipse.jdt.launching.JRE_CONTAINER')
-         containers 'org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7'
-    }
-}
-
 task wrapper(type: Wrapper) {
     gradleVersion = '2.3'
+}
+
+
+apply plugin: 'signing'
+apply plugin: 'maven'
+
+group = 'eu.hinsch'
+
+task javadocJar(type: Jar, dependsOn: javadoc) {
+    classifier = 'javadoc'
+    from tasks.javadoc.destinationDir
+}
+
+task sourcesJar(type: Jar) {
+    from sourceSets.main.allSource
+    classifier = 'sources'
+}
+
+artifacts {
+    archives jar
+    archives javadocJar
+    archives sourcesJar
+}
+
+signing {
+    sign configurations.archives
+}
+
+uploadArchives {
+    repositories {
+        mavenDeployer {
+            beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
+
+            repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2/") {
+                authentication(userName: sonatypeUsername, password: sonatypePassword)
+            }
+
+            pom.project {
+                name 'spring-boot-actuator-endpoint-list'
+                packaging 'jar'
+                description 'simple spring boot actuator entry point to list all endpoints'
+                url 'https://github.com/lukashinsch/spring-boot-actuator-endpoint.list/'
+
+                scm {
+                    url 'scm:git@github.com:lukashinsch/spring-boot-actuator-endpoint-list.git'
+                    connection 'scm:git@github.com:lukashinsch/spring-boot-actuator-endpoint-list.git'
+                    developerConnection 'scm:git@github.com:lukashinsch/spring-boot-actuator-endpoint-list.git'
+                }
+
+                licenses {
+                    license {
+                        name 'MIT License'
+                        url 'http://www.opensource.org/licenses/mit-license.php'
+                        distribution 'repo'
+                    }
+                }
+
+                developers {
+                    developer {
+                        id 'lukashinsch'
+                        name 'Lukas Hinsch'
+                    }
+                }
+
+                parent {
+                    groupId 'org.springframework.boot'
+                    artifactId 'spring-boot-starter-parent'
+                    version '1.2.2.RELEASE'
+                }
+            }
+        }
+    }
 }
